# online_purchase_optimizer

./: .gitignore  LICENSE  Notebook.ipynb  README.md  environment.yml  pyproject.toml  retailoptimizer.py  setup.py
docs/: EXCEL.md  MATH.md
examples/: sample-order-large.xlsx  sample-order-large_results.xlsx  sample-order-small.xlsx  sample-order-small_results.xlsx
src/online_purchase_optimizer/: retailoptimizer.py
tests/: test_optimize.py
